Rettelse af typos

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-/* Dette er udviklet af multimediedesignstuderende Johanne Vorre fra arhvervsakademi Dania i Skive. Koden er fremstillet i forbindelse med afsluttende hovedopgave sommeren 2019 */
+/* Dette er udviklet af multimediedesignstuderende Johanne Vorre fra erhvervsakademi Dania i Skive. Koden er fremstillet i forbindelse med afsluttende hovedopgave sommeren 2019 */
 
 /*al tekst fremvises med fonten Roboto*/
 html {
